Fixed whitespace in user profile

--- a/app/assets/stylesheets/app/users/show.scss
+++ b/app/assets/stylesheets/app/users/show.scss
@@ -88,6 +88,7 @@ body.users.update {
 
       .description {
         margin: 20px 0;
+        white-space: normal;
       }
 
       .profile-options {
